adding  modified swagger and routes [finishes #168469705]
